Updated /state to display fanCycleSpeed, windowOpen & nightModeConfig
